# bagconv

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  bagconv.cc  bagserv.cc  clean.sh  docker-run.sh  geo-queries.sql  get-bag-xml.sh  get-date-of-xml.py  jsonhelper.cc  jsonhelper.hh  make-csvs.sh  make-csvs.sql  make-database.sh  make-my-csvs.sql  mkindx  mkindx.sql  rd2wgs84.cc  rd2wgs84.hh  run.sh  sqlwriter.cc  sqlwriter.hh  thingpool.hh
.github/workflows/: cmake.yml
ext/cpp-httplib-0.18.1/: httplib.h
html/: index.html
